replays/errorlog-20181107-182142-0500-1541632901-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    if not cell.is_occupied and cell.position is not ship.position and game_map.normalizecell.position) not in current_targets:
                                                                                                      ^
SyntaxError: invalid syntax

